fixed file logic